force-app/commons/logger/objects/LoggingEvent__e/LoggingEvent__e.object-meta.xml
<CustomObject>
    <label>Logging Event</label>
    <pluralLabel>Logging Events</pluralLabel>
</CustomObject>