force-app/commons/logger/objects/LoggingEvent__e/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>