force-app/commons/logger/objects/LoggingEvent__e/fields/ExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTime__c</fullName>
    <label>Execution Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>