force-app/commons/logger/objects/LoggingEvent__e/fields/HttpStatus__c.field-meta.xml
<CustomField>
    <fullName>HttpStatus__c</fullName>
    <label>Http Status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>