force-app/commons/logger/objects/LoggingEvent__e/fields/LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevel__c</fullName>
    <label>Logging Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>