force-app/commons/logger/objects/LoggingEvent__e/fields/Outbound__c.field-meta.xml
<CustomField>
    <fullName>Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound</label>
    <type>Checkbox</type>
</CustomField>