force-app/commons/logger/objects/LoggingEvent__e/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>