force-app/commons/logger/objects/LoggingEvent__e/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Request Quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>