force-app/commons/logger/objects/LoggingEvent__e/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>