force-app/commons/logger/objects/LoggingEvent__e/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <description>Id of record related to this log</description>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>