force-app/commons/logger/objects/LoggingEvent__e/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>