force-app/commons/logger/objects/LoggingEvent__e/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <description>Salesforce Request Id</description>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>