force-app/commons/logger/objects/LoggingEvent__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>15</length>
    <type>Text</type>
q</CustomField>