force-app/commons/logger/objects/LoggingEvent__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>